# rstk

./: .clang-format  .cli_history  .gitignore  CMakeLists.txt  go.mod  go.sum  index.html  main.cpp  main.go  mygraph.gv
.cache/clangd/index/: graph.cpp.71E16DCF0489D96F.idx  graph.hpp.CB7DC225213E5B97.idx  main.cpp.B77945C7DB32BB8D.idx  topology.cpp.66765CE04C23844B.idx
cli/: cli.go  commands.go
cmd/: main.go
cmd/cli/: cli.go  commands.go
configs/templates/: frr.conf.template
data/tests/: test.as-rel2.txt
docs/: as-path-verification.md  design.md  desing.md  experiments.md  test-bed-instructions.md  test.md  todo.md
include/cli/: cli.hpp  commands.hpp  helpers.hpp  interactive.hpp  state.hpp  ui.hpp
include/database/: dbmanager.hpp  queries.hpp
include/engine/: core.hpp  ebus.hpp  engine.hpp
include/engine/events/: complete.hpp  startup.hpp
include/engine/experiments/: experiments.hpp  register.hpp  thpool.hpp
include/engine/pipeline/: pipeline.hpp
include/engine/rpki/: rpki.hpp
include/engine/topology/: deployment.hpp  postop.hpp  topology.hpp
include/graph/: graph.hpp  operations.hpp
include/logger/: logger.hpp  verbosity.hpp
include/parser/: parser.hpp
include/plugins/: manager.hpp  plugins.hpp
include/proto/: manager.hpp  policy.hpp  proto.hpp
include/proto/aspa/: aspa.hpp  (+1 more)
include/router/: relation.hpp  route.hpp  router.hpp
internal/common/: common.go
internal/engine/: engine.go  profiler.go
internal/graph/: adversary.go  factory.go  graph.go  graph_test.go  policy_factory.go
internal/interfaces/: policy.go  router.go  topology.go
internal/models/: topology.go
internal/parser/: parser.go
internal/protocols/: aspa.go
internal/router/: interfaces.go  p_aspa.go  p_default.go  policy.go  route.go  router.go  utils.go
internal/routermodel/: routermodel.go
internal/rpki/: certificates.go  rpki.go
kathara/: Dockerfile  lab.conf  pc1.startup  pc2.startup  r1.startup  readme.txt  start.sh
logs/: route-propagation-test-topology.logs
pkg/models/: route.go  router.go
scripts/: config.sh  copy.sh  extract.sh  gcp-configurations.sh  get-caida.sh  setup.sh
scripts/converters/: caida.py  utils.py
src/cli/: cli.cpp  commands.cpp  helpers.cpp  interactive.cpp  state.cpp  ui.cpp
src/database/: dbmanager.cpp  queries.cpp
src/engine/: core.cpp  ebus.cpp  engine.cpp
src/parser/: parser.cpp
src/plugins/: manager.cpp  plugins.cpp
src/proto/: manager.cpp  policy.cpp  proto.cpp
src/router/: route.cpp  router.cpp
tests/: graph_test.cpp  router_test.cpp  rpki_test.cpp  topology_test.cpp
tests/plugins/: aspa_test.cpp  base_test.cpp
(+53 files in other folders)
